--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "blog-backend",
+  "description": "blog api",
   "version": "0.0.0",
+  "main": "./bin/www",
   "engines": {
     "node": "16.15.1"
   },
-  "private": true,
+  
   "scripts": {
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www",
